--- a/src/Components/Home/index.css
+++ b/src/Components/Home/index.css
@@ -1,63 +1,70 @@
-import styled from 'styled-components'
-
-export const HomeContainer = styled.div`
+.home-container {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-image: url('https://assets.ccbp.in/frontend/react-js/home-sm-bg.png');
   background-size: cover;
+}
 
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .home-container {
     background-image: url('https://assets.ccbp.in/frontend/react-js/home-lg-bg.png');
   }
-`
+}
 
-export const HomeContent = styled.div`
+.home-content {
   width: 90%;
   max-width: 900px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-bottom: 50px;
+}
 
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .home-content {
     padding-top: 50px;
   }
-`
+}
 
-export const HomeTitle = styled.h1`
+.home-title {
   font-size: 34px;
   max-width: 500px;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-weight: 900;
   color: #fff;
   margin-top: 50px;
   margin-bottom: 20px;
+}
 
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .home-title {
     font-size: 60px;
     margin-bottom: 30px;
   }
-`
+}
 
-export const HomeDescription = styled.p`
+.home-description {
   font-size: 16px;
   max-width: 500px;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-weight: 300;
   color: #fff;
   line-height: 1.6;
   letter-spacing: 1px;
   margin-bottom: 30px;
+}
 
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .home-description {
     font-size: 18px;
   }
-`
+}
 
-export const FindJobsButton = styled.button`
+.home-find-jobs-button {
   display: block;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-size: 14px;
   font-weight: 500;
   color: #fff;
@@ -67,11 +74,13 @@ export const FindJobsButton = styled.button`
   cursor: pointer;
   width: 90px;
   height: 35px;
+}
 
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .home-find-jobs-button {
     width: 110px;
     border-radius: 4px;
     font-size: 14px;
     height: 40px;
   }
-`
+}
