--- a/src/Components/FailureView/index.css
+++ b/src/Components/FailureView/index.css
@@ -1,52 +1,56 @@
-import styled from 'styled-components'
-
-export const FailureContainer = styled.div`
+.api-failure-container {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-`
+}
 
-export const FailureImage = styled.img`
+.api-failure-image {
   width: 80%;
+}
 
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .api-failure-image {
     width: 90%;
   }
-`
+}
 
-export const FailureTitle = styled.h1`
+.api-failure-title {
   color: #fff;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-size: 22px;
   margin-top: 30px;
   text-align: center;
+}
 
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .api-failure-title {
     font-size: 36px;
     margin-top: 40px;
   }
-`
+}
 
-export const FailureMessage = styled.p`
+.api-failure-message {
   color: #fff;
   font-size: 16px;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-weight: 300;
   text-align: center;
   max-width: 250px;
   line-height: 1.5;
+}
 
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .api-failure-message {
     max-width: 400px;
     margin-top: 0;
     margin-bottom: 40px;
   }
-`
+}
 
-export const RetryButton = styled.button`
-  font-family: Roboto;
+.api-retry-button {
+  font-family: Roboto, sans-serif;
   font-size: 12px;
   font-weight: 500;
   color: #fff;
@@ -57,4 +61,4 @@ export const RetryButton = styled.button`
   border-radius: 4px;
   width: 100px;
   height: 30px;
-`
+}
