--- a/src/Components/Login/index.css
+++ b/src/Components/Login/index.css
@@ -1,15 +1,13 @@
-import styled from 'styled-components'
-
-export const LoginContainer = styled.div`
+.login-container {
   min-height: 100vh;
   background-color: #121212;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 50px auto;
-`
+}
 
-export const LoginContent = styled.div`
+.login-content {
   width: 90%;
   max-width: 400px;
   background-color: #272727;
@@ -18,39 +16,45 @@ export const LoginContent = styled.div`
   flex-direction: column;
   align-items: center;
   padding: 40px;
+}
 
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .login-content {
     padding: 50px;
   }
-`
+}
 
-export const LoginLogo = styled.img`
+.login-logo {
   width: 110px;
   margin-bottom: 50px;
+}
 
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .login-logo {
     width: 150px;
   }
-`
+}
 
-export const LoginForm = styled.form`
+.login-form {
   width: 90%;
   display: flex;
   flex-direction: column;
+}
 
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .login-form {
     width: 100%;
   }
-`
+}
 
-export const LoginLabel = styled.label`
+.login-label {
   color: #fff;
   font-size: 12px;
   font-family: Roboto;
   margin-bottom: 10px;
-`
+}
 
-export const LoginInput = styled.input`
+.login-input {
   width: 100%;
   padding: 10px 20px;
   border: 1px solid #475568;
@@ -59,9 +63,9 @@ export const LoginInput = styled.input`
   color: #fff;
   font-size: 12px;
   margin-bottom: 20px;
-`
+}
 
-export const LoginButton = styled.button`
+.login-button {
   width: 100%;
   padding: 12px;
   border: none;
@@ -71,10 +75,10 @@ export const LoginButton = styled.button`
   font-size: 12px;
   font-weight: bold;
   cursor: pointer;
-`
+}
 
-export const ErrorMessage = styled.p`
+.login-error-message {
   color: red;
   font-size: 10px;
   margin-top: 4px;
-`
+}
