--- a/src/Components/ProfileInfo/index.css
+++ b/src/Components/ProfileInfo/index.css
@@ -1,6 +1,4 @@
-import styled from 'styled-components'
-
-export const ProfileContainer = styled.div`
+.profile-container {
   width: 100%;
   background-image: url('https://assets.ccbp.in/frontend/react-js/profile-bg.png');
   background-size: cover;
@@ -8,52 +6,58 @@ export const ProfileContainer = styled.div`
   margin: 20px 0px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+}
 
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .profile-container {
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
   }
-`
+}
 
-export const ProfileImage = styled.img`
+.profile-image {
   width: 40px;
+}
 
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .profile-image {
     width: 50px;
   }
-`
+}
 
-export const UserName = styled.p`
+.profile-username {
   font-size: 18px;
   font-family: Roboto;
   font-weight: bold;
   color: #6163ee;
   margin-top: 5px;
   margin-bottom: 10px;
+}
 
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .profile-username {
     margin-bottom: 15px;
   }
-`
+}
 
-export const ShortBio = styled.p`
+.profile-short-bio {
   font-size: 14px;
   font-family: Roboto;
   color: #272727;
   margin-top: 5px;
   margin-bottom: 10px;
   line-height: 1.6;
-`
+}
 
-export const FailureContainer = styled.div`
+.profile-failure-container {
   width: 100%;
   height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
-`
+}
 
-export const RetryButton = styled.button`
+.profile-retry-button {
   display: block;
   font-family: Roboto;
   font-size: 14px;
@@ -65,11 +69,11 @@ export const RetryButton = styled.button`
   cursor: pointer;
   width: 90px;
   height: 35px;
-`
+}
 
-export const LoaderContainer = styled.div`
+.profile-loader-container {
   height: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
-`
+}
