--- a/src/Components/Home/index.css
+++ b/src/Components/Home/index.css
@@ -62,6 +62,11 @@
   }
 }
 
+.link {
+  text-decoration: inherit;
+  color: inherit;
+}
+
 .home-find-jobs-button {
   display: block;
   font-family: Roboto, sans-serif;
